--- a/skyfetch/index.html
+++ b/skyfetch/index.html
@@ -11,6 +11,11 @@
       <h1>🌤️ SkyFetch</h1>
       <p class="tagline">Your Personal Weather Dashboard</p>
 
+      <div class="search-section">
+        <input type="text" id="city-input" placeholder="Enter city name..." />
+        <button id="search-btn">🔍</button>
+      </div>
+
       <div id="weather-display">
         <p class="loading">Loading weather data...</p>
       </div>
